force-app/main/default/objects/Training_Participant__c/Training_Participant__c.object-meta.xml
<CustomObject>
    <description>For https://wiki.u-blox.com/bin/view/Generic/IT/OpenIssues55453</description>
    <label>Training Participant</label>
    <nameField>
        <displayFormat>TP-{00000000}</displayFormat>
        <label>Training Participant Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Training Participants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>