force-app/main/default/objects/Training_Participant__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Populated by process</description>
    <inlineHelpText>Auto-populated once Contact is added and saved</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Training Participants</relationshipLabel>
    <relationshipName>Training_Participants</relationshipName>
    <type>Lookup</type>
</CustomField>