force-app/main/default/objects/Training_Participant__c/fields/Test_Score_Pct__c.field-meta.xml
<CustomField>
    <fullName>Test_Score_Pct__c</fullName>
    <label>Test Score (Pct)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>