force-app/main/default/objects/Training_Participant__c/fields/Training_Test__c.field-meta.xml
<CustomField>
    <fullName>Training_Test__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Training Test</label>
    <referenceTo>Training_Test__c</referenceTo>
    <relationshipLabel>Training Participants</relationshipLabel>
    <relationshipName>Training_Participants</relationshipName>
    <type>Lookup</type>
</CustomField>